// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC2 .createMinimalVpc() matches snapshot 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
    },
  },
  "Resources": {
    "PreFixVpc359F0D17": {
      "Properties": {
        "CidrBlock": "10.255.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "PreFixVpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "PreFixVpcIGWB72EC1F8": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "PreFixVpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "PreFixVpcNatSecurityGroupB8DC3E44": {
      "Properties": {
        "GroupDescription": "Security Group for NAT instances",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:ALL TRAFFIC",
            "IpProtocol": "-1",
          },
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "PreFixVpc",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "PreFixVpcPrivateSubnet1DefaultRoute7BD7525C": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "InstanceId": {
          "Ref": "PreFixVpcPublicSubnet1NatInstanceD2A9D892",
        },
        "RouteTableId": {
          "Ref": "PreFixVpcPrivateSubnet1RouteTable7459336D",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "PreFixVpcPrivateSubnet1RouteTable7459336D": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "PreFixVpcPrivateSubnet1RouteTableAssociation7D0A7075": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PreFixVpcPrivateSubnet1RouteTable7459336D",
        },
        "SubnetId": {
          "Ref": "PreFixVpcPrivateSubnet1Subnet1E1B0F7C",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "PreFixVpcPrivateSubnet1Subnet1E1B0F7C": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.255.32.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "PreFixVpcPublicSubnet1DefaultRouteB716A66A": {
      "DependsOn": [
        "PreFixVpcVPCGWC09F8D3F",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "PreFixVpcIGWB72EC1F8",
        },
        "RouteTableId": {
          "Ref": "PreFixVpcPublicSubnet1RouteTable23041149",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "PreFixVpcPublicSubnet1NatInstanceD2A9D892": {
      "DependsOn": [
        "PreFixVpcPublicSubnet1NatInstanceInstanceRole8668D096",
      ],
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "IamInstanceProfile": {
          "Ref": "PreFixVpcPublicSubnet1NatInstanceInstanceProfile6C792A75",
        },
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "InstanceType": "t2.nano",
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "PreFixVpcNatSecurityGroupB8DC3E44",
              "GroupId",
            ],
          },
        ],
        "SourceDestCheck": false,
        "SubnetId": {
          "Ref": "PreFixVpcPublicSubnet1Subnet8F335C33",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet1/NatInstance",
          },
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash
yum install iptables-services -y
systemctl enable iptables
systemctl start iptables
echo "net.ipv4.ip_forward=1" > /etc/sysctl.d/custom-ip-forwarding.conf
sudo sysctl -p /etc/sysctl.d/custom-ip-forwarding.conf
sudo /sbin/iptables -t nat -A POSTROUTING -o $(route | awk '/^default/{print $NF}') -j MASQUERADE
sudo /sbin/iptables -F FORWARD
sudo service iptables save",
        },
      },
      "Type": "AWS::EC2::Instance",
    },
    "PreFixVpcPublicSubnet1NatInstanceInstanceProfile6C792A75": {
      "Properties": {
        "Roles": [
          {
            "Ref": "PreFixVpcPublicSubnet1NatInstanceInstanceRole8668D096",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "PreFixVpcPublicSubnet1NatInstanceInstanceRole8668D096": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet1/NatInstance",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PreFixVpcPublicSubnet1RouteTable23041149": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "PreFixVpcPublicSubnet1RouteTableAssociation0CC9D25D": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PreFixVpcPublicSubnet1RouteTable23041149",
        },
        "SubnetId": {
          "Ref": "PreFixVpcPublicSubnet1Subnet8F335C33",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "PreFixVpcPublicSubnet1Subnet8F335C33": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.255.0.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "PreFixVpcVPCGWC09F8D3F": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "PreFixVpcIGWB72EC1F8",
        },
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`EC2 .createProdVpc() matches snapshot 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "PreFixVpc359F0D17": {
      "Properties": {
        "CidrBlock": "10.255.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "PreFixVpcIGWB72EC1F8": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "PreFixVpcPrivateSubnet1DefaultRoute7BD7525C": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "PreFixVpcPublicSubnet1NATGateway8028601E",
        },
        "RouteTableId": {
          "Ref": "PreFixVpcPrivateSubnet1RouteTable7459336D",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "PreFixVpcPrivateSubnet1RouteTable7459336D": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "PreFixVpcPrivateSubnet1RouteTableAssociation7D0A7075": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PreFixVpcPrivateSubnet1RouteTable7459336D",
        },
        "SubnetId": {
          "Ref": "PreFixVpcPrivateSubnet1Subnet1E1B0F7C",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "PreFixVpcPrivateSubnet1Subnet1E1B0F7C": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.255.64.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "PreFixVpcPrivateSubnet2DefaultRoute67481D08": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "PreFixVpcPublicSubnet2NATGatewayCBB8790A",
        },
        "RouteTableId": {
          "Ref": "PreFixVpcPrivateSubnet2RouteTableFE884CC6",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "PreFixVpcPrivateSubnet2RouteTableAssociation6038EA67": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PreFixVpcPrivateSubnet2RouteTableFE884CC6",
        },
        "SubnetId": {
          "Ref": "PreFixVpcPrivateSubnet2Subnet6CEDF904",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "PreFixVpcPrivateSubnet2RouteTableFE884CC6": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "PreFixVpcPrivateSubnet2Subnet6CEDF904": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.255.96.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "PreFixVpcPublicSubnet1DefaultRouteB716A66A": {
      "DependsOn": [
        "PreFixVpcVPCGWC09F8D3F",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "PreFixVpcIGWB72EC1F8",
        },
        "RouteTableId": {
          "Ref": "PreFixVpcPublicSubnet1RouteTable23041149",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "PreFixVpcPublicSubnet1EIPE43C73C5": {
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "PreFixVpcPublicSubnet1NATGateway8028601E": {
      "DependsOn": [
        "PreFixVpcPublicSubnet1DefaultRouteB716A66A",
        "PreFixVpcPublicSubnet1RouteTableAssociation0CC9D25D",
      ],
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "PreFixVpcPublicSubnet1EIPE43C73C5",
            "AllocationId",
          ],
        },
        "SubnetId": {
          "Ref": "PreFixVpcPublicSubnet1Subnet8F335C33",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet1",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "PreFixVpcPublicSubnet1RouteTable23041149": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "PreFixVpcPublicSubnet1RouteTableAssociation0CC9D25D": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PreFixVpcPublicSubnet1RouteTable23041149",
        },
        "SubnetId": {
          "Ref": "PreFixVpcPublicSubnet1Subnet8F335C33",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "PreFixVpcPublicSubnet1Subnet8F335C33": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.255.0.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "PreFixVpcPublicSubnet2DefaultRoute41C7E8D0": {
      "DependsOn": [
        "PreFixVpcVPCGWC09F8D3F",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "PreFixVpcIGWB72EC1F8",
        },
        "RouteTableId": {
          "Ref": "PreFixVpcPublicSubnet2RouteTableF7146078",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "PreFixVpcPublicSubnet2EIP699088B1": {
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet2",
          },
        ],
      },
      "Type": "AWS::EC2::EIP",
    },
    "PreFixVpcPublicSubnet2NATGatewayCBB8790A": {
      "DependsOn": [
        "PreFixVpcPublicSubnet2DefaultRoute41C7E8D0",
        "PreFixVpcPublicSubnet2RouteTableAssociationB661D737",
      ],
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "PreFixVpcPublicSubnet2EIP699088B1",
            "AllocationId",
          ],
        },
        "SubnetId": {
          "Ref": "PreFixVpcPublicSubnet2Subnet387DF9A4",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet2",
          },
        ],
      },
      "Type": "AWS::EC2::NatGateway",
    },
    "PreFixVpcPublicSubnet2RouteTableAssociationB661D737": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PreFixVpcPublicSubnet2RouteTableF7146078",
        },
        "SubnetId": {
          "Ref": "PreFixVpcPublicSubnet2Subnet387DF9A4",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "PreFixVpcPublicSubnet2RouteTableF7146078": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "PreFixVpcPublicSubnet2Subnet387DF9A4": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.255.32.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "PreFixVpcVPCGWC09F8D3F": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "PreFixVpcIGWB72EC1F8",
        },
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`EC2 .createVpc() matches snapshot 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
    },
  },
  "Resources": {
    "PreFixVpc359F0D17": {
      "Properties": {
        "CidrBlock": "10.255.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "PreFixVpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "PreFixVpcIGWB72EC1F8": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "PreFixVpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "PreFixVpcNatSecurityGroupB8DC3E44": {
      "Properties": {
        "GroupDescription": "Security Group for NAT instances",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "from 0.0.0.0/0:ALL TRAFFIC",
            "IpProtocol": "-1",
          },
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "PreFixVpc",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "PreFixVpcPrivateSubnet1DefaultRoute7BD7525C": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "InstanceId": {
          "Ref": "PreFixVpcPublicSubnet1NatInstanceD2A9D892",
        },
        "RouteTableId": {
          "Ref": "PreFixVpcPrivateSubnet1RouteTable7459336D",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "PreFixVpcPrivateSubnet1RouteTable7459336D": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "PreFixVpcPrivateSubnet1RouteTableAssociation7D0A7075": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PreFixVpcPrivateSubnet1RouteTable7459336D",
        },
        "SubnetId": {
          "Ref": "PreFixVpcPrivateSubnet1Subnet1E1B0F7C",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "PreFixVpcPrivateSubnet1Subnet1E1B0F7C": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.255.64.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PrivateSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "PreFixVpcPrivateSubnet2DefaultRoute67481D08": {
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "InstanceId": {
          "Ref": "PreFixVpcPublicSubnet2NatInstance50153413",
        },
        "RouteTableId": {
          "Ref": "PreFixVpcPrivateSubnet2RouteTableFE884CC6",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "PreFixVpcPrivateSubnet2RouteTableAssociation6038EA67": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PreFixVpcPrivateSubnet2RouteTableFE884CC6",
        },
        "SubnetId": {
          "Ref": "PreFixVpcPrivateSubnet2Subnet6CEDF904",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "PreFixVpcPrivateSubnet2RouteTableFE884CC6": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "PreFixVpcPrivateSubnet2Subnet6CEDF904": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.255.96.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private",
          },
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PrivateSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "PreFixVpcPublicSubnet1DefaultRouteB716A66A": {
      "DependsOn": [
        "PreFixVpcVPCGWC09F8D3F",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "PreFixVpcIGWB72EC1F8",
        },
        "RouteTableId": {
          "Ref": "PreFixVpcPublicSubnet1RouteTable23041149",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "PreFixVpcPublicSubnet1NatInstanceD2A9D892": {
      "DependsOn": [
        "PreFixVpcPublicSubnet1NatInstanceInstanceRole8668D096",
      ],
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "IamInstanceProfile": {
          "Ref": "PreFixVpcPublicSubnet1NatInstanceInstanceProfile6C792A75",
        },
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "InstanceType": "t3.micro",
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "PreFixVpcNatSecurityGroupB8DC3E44",
              "GroupId",
            ],
          },
        ],
        "SourceDestCheck": false,
        "SubnetId": {
          "Ref": "PreFixVpcPublicSubnet1Subnet8F335C33",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet1/NatInstance",
          },
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash
yum install iptables-services -y
systemctl enable iptables
systemctl start iptables
echo "net.ipv4.ip_forward=1" > /etc/sysctl.d/custom-ip-forwarding.conf
sudo sysctl -p /etc/sysctl.d/custom-ip-forwarding.conf
sudo /sbin/iptables -t nat -A POSTROUTING -o $(route | awk '/^default/{print $NF}') -j MASQUERADE
sudo /sbin/iptables -F FORWARD
sudo service iptables save",
        },
      },
      "Type": "AWS::EC2::Instance",
    },
    "PreFixVpcPublicSubnet1NatInstanceInstanceProfile6C792A75": {
      "Properties": {
        "Roles": [
          {
            "Ref": "PreFixVpcPublicSubnet1NatInstanceInstanceRole8668D096",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "PreFixVpcPublicSubnet1NatInstanceInstanceRole8668D096": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet1/NatInstance",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PreFixVpcPublicSubnet1RouteTable23041149": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "PreFixVpcPublicSubnet1RouteTableAssociation0CC9D25D": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PreFixVpcPublicSubnet1RouteTable23041149",
        },
        "SubnetId": {
          "Ref": "PreFixVpcPublicSubnet1Subnet8F335C33",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "PreFixVpcPublicSubnet1Subnet8F335C33": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.255.0.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet1",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "PreFixVpcPublicSubnet2DefaultRoute41C7E8D0": {
      "DependsOn": [
        "PreFixVpcVPCGWC09F8D3F",
      ],
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "PreFixVpcIGWB72EC1F8",
        },
        "RouteTableId": {
          "Ref": "PreFixVpcPublicSubnet2RouteTableF7146078",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "PreFixVpcPublicSubnet2NatInstance50153413": {
      "DependsOn": [
        "PreFixVpcPublicSubnet2NatInstanceInstanceRoleA1A4D63B",
      ],
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "IamInstanceProfile": {
          "Ref": "PreFixVpcPublicSubnet2NatInstanceInstanceProfileB1B475C5",
        },
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestal2023amikernel61x8664C96584B6F00A464EAD1953AFF4B05118Parameter",
        },
        "InstanceType": "t3.micro",
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "PreFixVpcNatSecurityGroupB8DC3E44",
              "GroupId",
            ],
          },
        ],
        "SourceDestCheck": false,
        "SubnetId": {
          "Ref": "PreFixVpcPublicSubnet2Subnet387DF9A4",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet2/NatInstance",
          },
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash
yum install iptables-services -y
systemctl enable iptables
systemctl start iptables
echo "net.ipv4.ip_forward=1" > /etc/sysctl.d/custom-ip-forwarding.conf
sudo sysctl -p /etc/sysctl.d/custom-ip-forwarding.conf
sudo /sbin/iptables -t nat -A POSTROUTING -o $(route | awk '/^default/{print $NF}') -j MASQUERADE
sudo /sbin/iptables -F FORWARD
sudo service iptables save",
        },
      },
      "Type": "AWS::EC2::Instance",
    },
    "PreFixVpcPublicSubnet2NatInstanceInstanceProfileB1B475C5": {
      "Properties": {
        "Roles": [
          {
            "Ref": "PreFixVpcPublicSubnet2NatInstanceInstanceRoleA1A4D63B",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "PreFixVpcPublicSubnet2NatInstanceInstanceRoleA1A4D63B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet2/NatInstance",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PreFixVpcPublicSubnet2RouteTableAssociationB661D737": {
      "Properties": {
        "RouteTableId": {
          "Ref": "PreFixVpcPublicSubnet2RouteTableF7146078",
        },
        "SubnetId": {
          "Ref": "PreFixVpcPublicSubnet2Subnet387DF9A4",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "PreFixVpcPublicSubnet2RouteTableF7146078": {
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "PreFixVpcPublicSubnet2Subnet387DF9A4": {
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": "",
            },
          ],
        },
        "CidrBlock": "10.255.32.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public",
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          {
            "Key": "Name",
            "Value": "Default/PreFixVpc/PublicSubnet2",
          },
        ],
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "PreFixVpcVPCGWC09F8D3F": {
      "Properties": {
        "InternetGatewayId": {
          "Ref": "PreFixVpcIGWB72EC1F8",
        },
        "VpcId": {
          "Ref": "PreFixVpc359F0D17",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
